[gd_scene load_steps=7 format=2]

[ext_resource path="res://2cd43b_cf012848bf0a4bf28f3c6f49e706735f_mv2.png" type="Texture" id=1]
[ext_resource path="res://Canvas.gd" type="Script" id=2]
[ext_resource path="res://pngs/brown/meter_bar_center-repeating_brown.png" type="Texture" id=3]
[ext_resource path="res://circle-png-15280.png" type="Texture" id=4]
[ext_resource path="res://pngs/blue/meter_bar_holder_center-repeating_blue.png" type="Texture" id=5]
[ext_resource path="res://pngs/brown/meter_icon_holder_brown.png" type="Texture" id=6]

[node name="Canvas" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Msg" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -285.823
margin_top = 9.02646
margin_right = -135.823
margin_bottom = 29.0265
rect_scale = Vector2( 4, 4 )
custom_colors/default_color = Color( 0.968627, 0.823529, 0.0509804, 1 )
custom_colors/selection_color = Color( 0.498039, 0.941176, 0.0509804, 1 )
custom_colors/font_color_selected = Color( 0.952941, 0.658824, 0.0313726, 1 )
custom_colors/font_color_shadow = Color( 0.819608, 0.180392, 0.0666667, 0.972549 )
text = "Application Form"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="msg1" type="Label" parent="."]
margin_left = 32.5514
margin_top = 97.6542
margin_right = 72.5514
margin_bottom = 111.654
rect_scale = Vector2( 5, 3 )
text = "Name: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="msg2" type="Label" parent="."]
margin_left = 36.7892
margin_top = 193.006
margin_right = 82.7892
margin_bottom = 207.006
rect_scale = Vector2( 5, 3 )
text = "Choose:-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 286.228
margin_top = 96.5317
margin_right = 786.228
margin_bottom = 146.532
__meta__ = {
"_edit_use_anchors_": false
}

[node name="check1" type="CheckBox" parent="."]
margin_left = 64.1447
margin_top = 256.579
margin_right = 116.145
margin_bottom = 286.579
rect_scale = Vector2( 3.38409, 2.08 )
text = "one"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="check2" type="CheckBox" parent="."]
margin_left = 65.0356
margin_top = 320.724
margin_right = 117.036
margin_bottom = 350.724
rect_scale = Vector2( 3.38409, 2.08 )
text = "two"

[node name="check3" type="CheckBox" parent="."]
margin_left = 65.928
margin_top = 374.668
margin_right = 127.928
margin_bottom = 404.668
rect_scale = Vector2( 3.38409, 2.08 )
text = "three"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 98.7767
margin_top = 482.659
margin_right = 110.777
margin_bottom = 502.659
rect_scale = Vector2( 0.335319, 0.291072 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = 253.755
margin_top = 504.98
margin_right = 503.755
margin_bottom = 804.98
rect_scale = Vector2( 2.67222, 0.18962 )
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TextureProgress"]
margin_left = -15.7969
margin_top = -34.9651
margin_right = 24.2031
margin_bottom = 5.03491
rect_scale = Vector2( 0.706011, 9.93031 )
texture = ExtResource( 6 )
expand = true

[node name="TextureProgress2" type="TextureProgress" parent="."]
margin_left = 709.791
margin_top = 324.367
margin_right = 711.791
margin_bottom = 326.367
rect_scale = Vector2( 0.109978, 0.0735927 )
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
fill_mode = 4
tint_under = Color( 0.47451, 0.443137, 0.443137, 1 )
tint_over = Color( 0.921569, 0.964706, 0.960784, 1 )
tint_progress = Color( 0.364706, 0.92549, 0.0588235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
